--- a/app/styles/components/_logo.scss
+++ b/app/styles/components/_logo.scss
@@ -5,7 +5,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 4;
     min-height: rem($bar-height);
     transition: transform 300ms $easing2, background-color 200ms;
     a {
